--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "temp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jaypea07.github.io/character-generator/",
   "dependencies": {
     "@types/jest": "^20.0.0",
     "@types/node": "^7.0.31",
@@ -11,12 +12,14 @@
     "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts-ts": "2.2.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "deploy" : "yarn build&&gh-pages -d build"
   }
 }
